--- a/CarDealershipInventory.Infrastructure.Data/CarDealershipInventory.Infrastructure.Data.csproj
+++ b/CarDealershipInventory.Infrastructure.Data/CarDealershipInventory.Infrastructure.Data.csproj
@@ -1,23 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite.Core" Version="5.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.8.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\CarDealershipInventory.Core.Entity\CarDealershipInventory.Core.Entity.csproj" />
     <ProjectReference Include="..\CarDealershipInventory.Core\CarDealershipInventory.Core.csproj" />
-    <ProjectReference Include="..\CarDealershipInventory.Infrastructure.DataInitialization\CarDealershipInventory.Infrastructure.DataInitialization.csproj" />
-    <ProjectReference Include="..\CarDealershipInventory.Infrastructure.Data\CarDealershipInventory.Infrastructure.Data.csproj" />
   </ItemGroup>
-
 
 </Project>
