--- a/CarDealershipInventory.Test/CarDealershipInventory.Test.csproj
+++ b/CarDealershipInventory.Test/CarDealershipInventory.Test.csproj
@@ -8,9 +8,17 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
+    <PackageReference Include="Moq" Version="4.15.2" />
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CarDealershipInventory.Core.Entity\CarDealershipInventory.Core.Entity.csproj" />
+    <ProjectReference Include="..\CarDealershipInventory.Core\CarDealershipInventory.Core.csproj" />
+    <ProjectReference Include="..\CarDealershipInventory.Infrastructure.DataInitialization\CarDealershipInventory.Infrastructure.DataInitialization.csproj" />
+    <ProjectReference Include="..\CarDealershipInventory.Infrastructure.Data\CarDealershipInventory.Infrastructure.Data.csproj" />
   </ItemGroup>
 
 </Project>
